--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ Description:
 Version: 1.0
 
 Main Font    : Manrope
-Main Color   : #4ac4f3
+Main Color   : #f8931e
 
 -------------------------------------
 
@@ -369,16 +369,16 @@ input {
 }
 
 .bg-theme {
-  background-color: #4ac4f3;
+  background-color: #f8931e;
 }
 
 .bg-gradient {
-  background: linear-gradient(to right, #118bba, #4ac4f3, #118bba);
+  background: linear-gradient(to right, #118bba, #f8931e, #118bba);
 }
 
 .gradient-bg {
   background-image: linear-gradient(90deg, rgba(2,59,166,1) 0%, rgba(67,126,235,1) 100%);
-  background-color: #4ac4f3;
+  background-color: #f8931e;
 }
 
 .text-light h1, 
@@ -423,7 +423,7 @@ input {
 }
 
 .shadow.theme::after {
-  background: #4ac4f3 none repeat scroll 0 0;
+  background: #f8931e none repeat scroll 0 0;
   content: "";
   height: 100%;
   left: 0;
@@ -435,7 +435,7 @@ input {
 }
 
 .shadow.theme-hard::after {
-  background: #4ac4f3 none repeat scroll 0 0;
+  background: #f8931e none repeat scroll 0 0;
   content: "";
   height: 100%;
   left: 0;
@@ -532,7 +532,7 @@ a:hover, a:active {
   content: "";
   height: 100%;
   width: 100%;
-  background-image: linear-gradient(to right, #118bba, #4ac4f3, #118bba);
+  background-image: linear-gradient(to right, #118bba, #f8931e, #118bba);
   background-size: 300% 100%;
   text-transform: uppercase;
   display: inline-block;
@@ -571,7 +571,7 @@ a:hover, a:active {
   width: 55px;
   text-align: center;
   line-height: 55px;
-  background: #4ac4f3;
+  background: #f8931e;
   border-radius: 50%;
   position: relative;
   margin-right: 20px;
@@ -580,7 +580,7 @@ a:hover, a:active {
 
 .text-light .video-btn i {
   background: #ffffff;
-  color: #4ac4f3;
+  color: #f8931e;
 }
 
 
@@ -595,7 +595,7 @@ a:hover, a:active {
     display: block;
     width: 60px;
     height: 60px;
-    background: #4ac4f3 repeat scroll 0 0;
+    background: #f8931e repeat scroll 0 0;
     -webkit-border-radius: 50%;
     -moz-border-radius: 50%;
     border-radius: 50%;
@@ -677,7 +677,7 @@ a:hover, a:active {
 }
 
 .btn-theme-border {
-  border: 2px solid #4ac4f3;
+  border: 2px solid #f8931e;
   overflow: hidden;
   position: relative;
   z-index: 1;
@@ -690,7 +690,7 @@ a:hover, a:active {
   content: "";
   height: 100%;
   width: 0;
-  background: #4ac4f3;
+  background: #f8931e;
   z-index: -1;
   transition: all 0.35s ease-in-out;
 }
@@ -740,7 +740,7 @@ a:hover, a:active {
 }
 
 .btn-theme-effect {
-  border: 2px solid #4ac4f3;
+  border: 2px solid #f8931e;
   overflow: hidden;
   position: relative;
   z-index: 1;
@@ -754,7 +754,7 @@ a:hover, a:active {
   content: "";
   height: 100%;
   width: 100%;
-  background: #4ac4f3;
+  background: #f8931e;
   z-index: -1;
   transition: all 0.35s ease-in-out;
 }
@@ -805,7 +805,7 @@ button, button:focus {
 .site-heading h5 {
   text-transform: uppercase;
   font-weight: 800;
-  color: #4ac4f3;
+  color: #f8931e;
   font-size: 18px;
   position: relative;
   z-index: 1;
@@ -829,7 +829,7 @@ button, button:focus {
   display: inline-block;
   width: 50px;
   height: 2px;
-  background: #4ac4f3;
+  background: #f8931e;
   position: relative;
   z-index: 1;
   left: 10px;
@@ -846,7 +846,7 @@ button, button:focus {
   content: "";
   height: 2px;
   width: 10px;
-  background: #4ac4f3;
+  background: #f8931e;
 }
 
 .area-title {
@@ -1409,7 +1409,7 @@ body,
       border-radius: 17rem;
       -webkit-transform: rotate(-45deg);
       transform: rotate(-45deg);
-      background: #4ac4f3;
+      background: #f8931e;
       z-index: -1;
   }
 }
@@ -1594,7 +1594,7 @@ body,
      # Video Button Play
 =================================================================== */
 .video-play-button {
-  color: #4ac4f3;
+  color: #f8931e;
   font-size: 30px;
   left: 50%;
   padding-left: 7px;
@@ -1629,7 +1629,7 @@ body,
 
 .video-play-button.theme:before,
 .video-play-button.theme:after {
-  background: #4ac4f3 repeat scroll 0 0;
+  background: #f8931e repeat scroll 0 0;
 }
 
 .orange .video-play-button.theme:before,
@@ -1691,7 +1691,7 @@ body,
   display: block;
   position: relative;
   z-index: 3;
-  color: #4ac4f3;
+  color: #f8931e;
 }
 
 .video-play-button.theme i {
@@ -1956,7 +1956,7 @@ body,
 
 .about-area .info h4 {
     font-weight: 600;
-    color: #4ac4f3;
+    color: #f8931e;
 }
 
 .about-area .info h2 {
@@ -1986,7 +1986,7 @@ body,
     width: 25px;
     line-height: 25px;
     text-align: center;
-    background: rgb(74, 196, 243);
+    background: #262261;
     border-radius: 50%;
 }
 
@@ -2009,7 +2009,7 @@ body,
 
 .about-area .info h4 {
     font-weight: 600;
-    color: #4ac4f3;
+    color: #f8931e;
 }
 
 .about-area .info h2 {
@@ -2063,7 +2063,7 @@ body,
 .about-area .about-content ul li i {
     display: inline-block;
     font-size: 40px;
-    color: #4ac4f3;
+    color: #f8931e;
     margin-right: 20px;
 }
 
@@ -2172,7 +2172,7 @@ body,
 .features-area .features-box .item i {
     display: inline-block;
     font-size: 45px;
-    color: #4ac4f3;
+    color: #f8931e;
     background: linear-gradient(45deg,#02ebad 0%,#5a57fb 100%);
     -webkit-background-clip: text;
     -moz-background-clip: text;
@@ -2205,7 +2205,7 @@ body,
 }
 
 .features-area .features-box .item ul li a:hover {
-  color: #4ac4f3;
+  color: #f8931e;
 }
 
 
@@ -2214,7 +2214,7 @@ body,
 }
 
 .features-area .features-box .left-content h4 {
-    color: #4ac4f3;
+    color: #f8931e;
     font-weight: 600;
 }
 
@@ -2258,7 +2258,7 @@ body,
   -moz-transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   -o-transform: translate(-50%, -50%);
-  background: #4ac4f3;
+  background: #f8931e;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
   border-radius: 50%;
@@ -2291,7 +2291,7 @@ body,
 .advanced-features-area .af-items .item i {
   display: inline-block;
     font-size: 60px;
-    color: #4ac4f3;
+    color: #f8931e;
     background: linear-gradient(45deg,#02ebad 0%,#5a57fb 100%);
     -webkit-background-clip: text;
     -moz-background-clip: text;
@@ -2321,7 +2321,7 @@ body,
 }
 
 .advanced-features-area .af-items .single-item:nth-child(2n) .item {
-    border-bottom: 3px solid #4ac4f3;
+    border-bottom: 3px solid #f8931e;
 }
 
 .advanced-features-area .af-items .item {
@@ -2335,7 +2335,7 @@ body,
 
 .advanced-features-area .af-items .item:hover {
   margin-top: -15px;
-  border-bottom: 3px solid #4ac4f3;
+  border-bottom: 3px solid #f8931e;
 }
 
 /* ============================================================== 
@@ -2384,7 +2384,7 @@ body,
 .our-features-area .feature-items .item .icon > i {
     display: inline-block;
     font-size: 60px;
-    color: #4ac4f3;
+    color: #f8931e;
     background: linear-gradient(45deg,#02ebad 0%,#5a57fb 100%);
     -webkit-background-clip: text;
     -moz-background-clip: text;
@@ -2438,7 +2438,7 @@ body,
     content: "";
     height: 80px;
     width: 80px;
-    background: #4ac4f3;
+    background: #f8931e;
     z-index: -1;
     -webkit-clip-path: polygon(92.32051% 40%, 93.79385% 43.1596%, 94.69616% 46.52704%, 95% 50%, 94.69616% 53.47296%, 93.79385% 56.8404%, 92.32051% 60%, 79.82051% 81.65064%, 77.82089% 84.50639%, 75.35575% 86.97152%, 72.5% 88.97114%, 69.3404% 90.44449%, 65.97296% 91.34679%, 62.5% 91.65064%, 37.5% 91.65064%, 34.02704% 91.34679%, 30.6596% 90.44449%, 27.5% 88.97114%, 24.64425% 86.97152%, 22.17911% 84.50639%, 20.17949% 81.65064%, 7.67949% 60%, 6.20615% 56.8404%, 5.30384% 53.47296%, 5% 50%, 5.30384% 46.52704%, 6.20615% 43.1596%, 7.67949% 40%, 20.17949% 18.34936%, 22.17911% 15.49361%, 24.64425% 13.02848%, 27.5% 11.02886%, 30.6596% 9.55551%, 34.02704% 8.65321%, 37.5% 8.34936%, 62.5% 8.34936%, 65.97296% 8.65321%, 69.3404% 9.55551%, 72.5% 11.02886%, 75.35575% 13.02848%, 77.82089% 15.49361%, 79.82051% 18.34936%);
     clip-path: polygon(92.32051% 40%, 93.79385% 43.1596%, 94.69616% 46.52704%, 95% 50%, 94.69616% 53.47296%, 93.79385% 56.8404%, 92.32051% 60%, 79.82051% 81.65064%, 77.82089% 84.50639%, 75.35575% 86.97152%, 72.5% 88.97114%, 69.3404% 90.44449%, 65.97296% 91.34679%, 62.5% 91.65064%, 37.5% 91.65064%, 34.02704% 91.34679%, 30.6596% 90.44449%, 27.5% 88.97114%, 24.64425% 86.97152%, 22.17911% 84.50639%, 20.17949% 81.65064%, 7.67949% 60%, 6.20615% 56.8404%, 5.30384% 53.47296%, 5% 50%, 5.30384% 46.52704%, 6.20615% 43.1596%, 7.67949% 40%, 20.17949% 18.34936%, 22.17911% 15.49361%, 24.64425% 13.02848%, 27.5% 11.02886%, 30.6596% 9.55551%, 34.02704% 8.65321%, 37.5% 8.34936%, 62.5% 8.34936%, 65.97296% 8.65321%, 69.3404% 9.55551%, 72.5% 11.02886%, 75.35575% 13.02848%, 77.82089% 15.49361%, 79.82051% 18.34936%);
@@ -2675,7 +2675,7 @@ body,
 
 .choose-us-area .info h4 {
   font-weight: 600;
-  color: #4ac4f3;
+  color: #f8931e;
 }
 
 .choose-us-area .info h2 {
@@ -2706,7 +2706,7 @@ body,
     top: 0px;
     content: "N";
     font-family: ElegantIcons;
-    color: rgb(74, 196, 243);
+    color: #262261;
 }
 
 .choose-us-area .progress-box {
@@ -2726,7 +2726,7 @@ body,
 }
 
 .choose-us-area .progress-box .progress .progress-bar {
-    background: #4ac4f3;
+    background: #f8931e;
     position: relative;
     overflow: inherit;
     border-radius: 30px;
@@ -2876,7 +2876,7 @@ body,
     content: "";
     height: 2px;
     width: 30px;
-    background: #4ac4f3;
+    background: #f8931e;
     margin-top: -1px;
 }
 
@@ -2911,7 +2911,7 @@ body,
   -moz-transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   -o-transform: translate(-50%, -50%);
-  background: #4ac4f3;
+  background: #f8931e;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
   border-radius: 50%;
@@ -2956,7 +2956,7 @@ body,
 }
 
 .center-tabs .nav-tabs li a.active {
-  color: #4ac4f3;
+  color: #f8931e;
 }
 
 .center-tabs .nav-tabs li a.active::after {
@@ -2966,7 +2966,7 @@ body,
   content: "";
   height: 15px;
   width: 1px;
-  background: #4ac4f3;
+  background: #f8931e;
 }
 
 .center-tabs .nav-tabs li a.active::before {
@@ -2976,7 +2976,7 @@ body,
   content: "";
   height: 10px;
   width: 10px;
-  border: 2px solid #4ac4f3;
+  border: 2px solid #f8931e;
   margin-left: -5px;
   border-radius: 50%;
 }
@@ -3278,7 +3278,7 @@ ul.achivement li .medium {
 }
 
 .team-area .team-items .info span {
-  color: #4ac4f3;
+  color: #f8931e;
   font-weight: 600;
   text-transform: capitalize;
 }
@@ -3434,7 +3434,7 @@ ul.achivement li .medium {
     background: #ffffff;
     text-align: center;
     border-radius: 50%;
-    color: #4ac4f3;
+    color: #f8931e;
     box-shadow: 1px 4px 20px -2px rgb(0 0 0 / 10%);
 }
 
@@ -3508,7 +3508,7 @@ ul.achivement li .medium {
 }
 
 .pricing-area .single-item:nth-child(2) .pricing-item .pricing-header h2 {
-    background: #4ac4f3;
+    background: #f8931e;
     border-bottom: 1px solid rgba(255, 255, 255, 0.6);
 }
 
@@ -3517,7 +3517,7 @@ ul.achivement li .medium {
 }
 
 .pricing-area .single-item:nth-child(2) .pricing-item {
-    border-color: #4ac4f3;
+    border-color: #f8931e;
     border-left: 1px solid #e7e7e7;
     border-right: 1px solid #e7e7e7;
 }
@@ -3547,7 +3547,7 @@ ul.achivement li .medium {
     right: 30px;
     top: 30px;
     font-weight: 600;
-    color: #4ac4f3;
+    color: #f8931e;
 }
 
 .pricing-area .pricing-item .pricing-header h4 {
@@ -3580,7 +3580,7 @@ ul.achivement li .medium {
 }
 
 .pricing-area .single-item:nth-child(2) .pricing-item .pricing-header h2::after {
-    border-bottom-color: #4ac4f3;
+    border-bottom-color: #f8931e;
 }
 
 .pricing-area .pricing-item .pricing-header h2 sup {
@@ -3621,7 +3621,7 @@ ul.achivement li .medium {
 
 .pricing-item li i {
   margin-right: 12px;
-  color: #4ac4f3;
+  color: #f8931e;
 }
 
 .pricing-item li i.fas.fa-minus-circle {
@@ -3698,7 +3698,7 @@ ul.achivement li .medium {
 .blog-area .item .date span {
     display: block;
     font-size: 14px;
-    background: #4ac4f3;
+    background: #f8931e;
     color: #ffffff;
     padding: 0 19px;
     border-radius: 0 0 8px 8px;
@@ -3746,7 +3746,7 @@ ul.achivement li .medium {
 
 .blog-area .item .info .meta ul li i {
     margin-right: 5px;
-    color: #4ac4f3;
+    color: #f8931e;
 }
 
 .blog-area .item .info h4 a {
@@ -3755,7 +3755,7 @@ ul.achivement li .medium {
 }
 
 .blog-area .item .info h4 a:hover {
-    color: #4ac4f3;
+    color: #f8931e;
 }
 
 .blog-area .item .info p:last-child {
@@ -3786,8 +3786,8 @@ ul.achivement li .medium {
 }
 
 .pagi-area .pagination li.active a {
-  background: #4ac4f3;
-  border-color: #4ac4f3;
+  background: #f8931e;
+  border-color: #f8931e;
 }
 
 /* Sidebar */
@@ -3827,7 +3827,7 @@ ul.achivement li .medium {
   content: "";
   height: 2px;
   width: 50px;
-  border-bottom: 2px solid #4ac4f3;
+  border-bottom: 2px solid #f8931e;
 }
 
 .blog-area .sidebar input[type="text"] {
@@ -3842,7 +3842,7 @@ ul.achivement li .medium {
 }
 
 .blog-area .sidebar button[type="submit"] {
-  background: #4ac4f3;
+  background: #f8931e;
   border: medium none;
   color: #ffffff;
   font-weight: 500;
@@ -3862,7 +3862,7 @@ ul.achivement li .medium {
 }
 
 .blog-area .sidebar input[type="submit"]:hover {
-  background: #4ac4f3 none repeat scroll 0 0;
+  background: #f8931e none repeat scroll 0 0;
 }
 
 .blog-area .sidebar .sidebar-item {
@@ -3896,7 +3896,7 @@ ul.achivement li .medium {
 }
 
 .blog-area .sidebar .sidebar-item li a:hover {
-  color: #4ac4f3;
+  color: #f8931e;
 }
 
 .blog-area .sidebar .sidebar-item.category li a span {
@@ -3952,7 +3952,7 @@ ul.achivement li .medium {
 }
 
 .sidebar-item.recent-post li a:hover {
-  color: #4ac4f3;
+  color: #f8931e;
 }
 
 .sidebar-item.recent-post li a span {
@@ -4143,7 +4143,7 @@ ul.achivement li .medium {
 }
 
 .sidebar-item.tags ul li a:hover {
-  color: #4ac4f3;
+  color: #f8931e;
 }
 
 .blog-area .sidebar .sidebar-item.add-banner .sidebar-info {
@@ -4163,7 +4163,7 @@ ul.achivement li .medium {
   content: "";
   height: 100%;
   width: 100%;
-  background: #4ac4f3;
+  background: #f8931e;
   z-index: -1;
   opacity: 0.7;
 }
@@ -4191,7 +4191,7 @@ ul.achivement li .medium {
 
 /* Blog Single */
 .blog-area.single .item .content-box span {
-  background: #4ac4f3 none repeat scroll 0 0;
+  background: #f8931e none repeat scroll 0 0;
   color: #ffffff;
   display: inline-block;
   font-weight: 600;
@@ -4283,7 +4283,7 @@ ul.achivement li .medium {
   content: "";
   height: 90%;
   width: 3px;
-  background: #4ac4f3;
+  background: #f8931e;
 }
 
 .blog-area .item blockquote::after {
@@ -4327,7 +4327,7 @@ ul.achivement li .medium {
 
 .blog-area .blog-content .share li a {
   display: inline-block;
-  color: #4ac4f3;
+  color: #f8931e;
 }
 
 .blog-area .blog-content .share li.facebook a {
@@ -4381,7 +4381,7 @@ ul.achivement li .medium {
 }
 
 .blog-area.single .post-pagi-area h5:hover {
-  color: #4ac4f3;
+  color: #f8931e;
 }
 
 .blog-area.single.color-yellow .post-pagi-area a:hover {
@@ -4514,7 +4514,7 @@ ul.achivement li .medium {
 }
 
 .comments-list .commen-item .content .reply a:hover {
-    background: #4ac4f3;
+    background: #f8931e;
 }
 
 .comments-list .commen-item .content .reply i {
@@ -4533,7 +4533,7 @@ ul.achivement li .medium {
 
 .comments-list .commen-item .content .title span {
     font-weight: 400;
-    color: #4ac4f3;
+    color: #f8931e;
     display: block;
     margin-top: 10px;
     font-size: 14px;
@@ -4574,7 +4574,7 @@ ul.achivement li .medium {
 }
 
 .comments-info a:hover {
-  color: #4ac4f3;
+  color: #f8931e;
 }
 
 .comments-info a i {
@@ -4606,7 +4606,7 @@ ul.achivement li .medium {
     text-transform: uppercase;
     font-weight: 700;
     transition: all 0.35s ease-in-out;
-    border: 2px solid #4ac4f3 !important;
+    border: 2px solid #f8931e !important;
     border-radius: 30px;
     position: relative;
     z-index: 1;
@@ -4621,7 +4621,7 @@ ul.achivement li .medium {
   content: "";
   height: 100%;
   width: 0;
-  background: #4ac4f3;
+  background: #f8931e;
   z-index: -1;
   transition: all 0.35s ease-in-out;
   border-radius: 30px;
@@ -4670,13 +4670,13 @@ ul.pagination {
   padding: 15px 20px;
   border-radius: 5px;
   margin: 0 2px;
-  color: #4ac4f3;
+  color: #f8931e;
   font-weight: 800;
 }
 
 .pagination li.page-item.active a {
-  background: #4ac4f3;
-  border-color: #4ac4f3;
+  background: #f8931e;
+  border-color: #f8931e;
 }
 
 
@@ -4718,7 +4718,7 @@ ul.pagination {
 .contact-area .info ul li h5 i {
     font-size: 25px;
     margin-right: 15px;
-    color: #4ac4f3;
+    color: #f8931e;
 }
 
 .contact-area .info ul li p {
@@ -4729,7 +4729,7 @@ ul.pagination {
     height: 50px;
     width: 50px;
     line-height: 50px;
-    background: #4ac4f3;
+    background: #f8931e;
     text-align: center;
     border-radius: 50%;
     color: #ffffff;
@@ -4745,7 +4745,7 @@ ul.pagination {
     height: 70px;
     width: 70px;
     content: "";
-    background: #4ac4f3;
+    background: #f8931e;
     z-index: -1;
     border-radius: 50%;
     opacity: 0.3;
@@ -4779,7 +4779,7 @@ ul.pagination {
 .contact-area .contact-forms button {
   padding: 10px 35px;
   background: transparent;
-  border: 2px solid #4ac4f3 !important;
+  border: 2px solid #f8931e !important;
   border-radius: 30px;
   text-transform: capitalize;
   font-weight: 700;
@@ -4788,7 +4788,7 @@ ul.pagination {
 }
 
 .contact-area .contact-forms button:hover {
-  background: #4ac4f3;
+  background: #f8931e;
   color: #ffffff;
 }
 
@@ -4812,7 +4812,7 @@ ul.pagination {
 .contact-area .form-box button {
     font-family: 'Manrope', sans-serif;
     display: inline-block;
-    background: linear-gradient(to right, #118bba, #4ac4f3, #118bba);
+    background: #262261;
     padding: 15px 40px;
     border-radius: 30px;
     color: #ffffff;
@@ -4882,7 +4882,7 @@ ul.pagination {
     height: 50px;
     width: 50px;
     border-radius: 50%;
-    background: #4ac4f3;
+    background: #f8931e;
     color: #ffffff;
 }
 
@@ -4993,7 +4993,7 @@ footer .f-items .f-item form button {
     height: 50px;
     width: 50px;
     background: transparent;
-    color: #4ac4f3;
+    color: #f8931e;
     font-size: 25px;
 }
 
@@ -5088,7 +5088,7 @@ footer.bg-dark .footer-bottom a {
 }
 
 footer.bg-dark .footer-bottom p a {
-  color: #4ac4f3;
+  color: #f8931e;
 }
 
 footer.bg-dark .footer-bottom a:hover {
@@ -5236,7 +5236,7 @@ footer.demo .copyright {
     position: absolute;
     right: 15px;
     top: -14px;
-    background: #4ac4f3;
+    background: #f8931e;
     color: #ffffff;
     padding: 1px 35px;
     border-radius: 30px;
